# kotopogoda-uploader-android

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  AGENTS.md  APK_SIZE_REDUCTION_REPORT.md  AUTOGENERATED_TESTS_ANALYSIS.md  CHANGELOG.md  CODEOWNERS  LICENSE  LOGGING_VERIFICATION_REPORT.md  LOGGING_VERIFICATION_SUMMARY.md  MODELS_LOCK_AUTOMATION.md  MODELS_REPOSITORY_VERIFICATION.md  NATIVE_BUILD_SUMMARY.md  OPTIMIZATION_SUMMARY.md  README.md  README_DIAGNOSIS.md  README_LOGGING_VERIFICATION.md  TASK_RESULT.md  TESTING_INSTRUCTIONS.md  TEST_GUARDRAILS.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  models.lock.json  settings.gradle.kts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 01_feature.md  02_bug.md  feature.yml
.github/workflows/: android-debug-apk.yml  auto-pr.yml  codex-ci-autofix.yml  codex-plan-runner.yml  issue-to-codex.yml  prepare_models.yml  release.yml
android-stubs/src/main/java/android/app/: PendingIntent.java  RecoverableSecurityException.java  RemoteAction.java
android-stubs/src/main/java/android/content/: IntentSender.java
android-stubs/src/main/java/android/graphics/drawable/: Icon.java
android-stubs/src/main/java/android/net/: Uri.java
android-stubs/src/main/java/android/util/: Base64.java
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/kotopogoda/uploader/: AppStartupLoggingTest.kt  HiltTestRunner.kt  LogsExporterTest.kt  NativeEnhanceLibrarySmokeTest.kt  QueueDrainStartupTest.kt  UnpairedLaunchTest.kt  UploadMultipartDigestInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/: SHA256SUMS.txt  restormer_fp16.param  restormer_fp16.tflite  restormer_fp16.tflite.sha256  zerodcepp_fp16.param  zerodcepp_fp16.tflite  zerodcepp_fp16.tflite.sha256
app/src/main/assets/models/models/: restormer_fp16.param
app/src/main/cpp/: .gitignore  CMakeLists.txt  README.md  hann_window.cpp  hann_window.h  native_enhance_jni.cpp  ncnn_engine.cpp  ncnn_engine.h  restormer_backend.cpp  restormer_backend.h  sha256_verifier.cpp  sha256_verifier.h  tile_processor.cpp  tile_processor.h  zerodce_backend.cpp  zerodce_backend.h
app/src/main/java/com/kotopogoda/uploader/: KotopogodaUploaderApp.kt  MainActivity.kt  MainViewModel.kt
app/src/main/java/com/kotopogoda/uploader/di/: AppInfoModule.kt  AppSettingsModule.kt  LoggingWorkerFactory.kt  NetworkStatusModule.kt  WorkManagerConfigModule.kt
app/src/main/java/com/kotopogoda/uploader/logging/: AppInfoModule.kt  AppInfoProviderImpl.kt  DeviceInfoModule.kt
app/src/main/java/com/kotopogoda/uploader/ml/: EnhancerModelProbe.kt  ModelChecksumVerifier.kt
app/src/main/java/com/kotopogoda/uploader/navigation/: AppNavigationEvent.kt  AppStartDestinationViewModel.kt  KotopogodaNavHost.kt
app/src/main/java/com/kotopogoda/uploader/notifications/: NotificationPermissionChecker.kt  NotificationPermissionModule.kt  UploadForegroundNotificationDelegate.kt  UploadNotif.kt  UploadNotificationModule.kt
app/src/main/java/com/kotopogoda/uploader/permissions/: MediaPermissionGate.kt
app/src/main/java/com/kotopogoda/uploader/ui/: SettingsScreen.kt  SettingsViewModel.kt
app/src/main/java/com/kotopogoda/uploader/upload/: UploadStartupInitializer.kt  UploadSummaryService.kt  UploadSummaryStarterImpl.kt
app/src/main/java/com/kotopogoda/uploader/work/: KotopogodaUploadWorker.kt  UploadWorkObserver.kt
app/src/main/kotlin/com/kotopogoda/uploader/: KotopogodaUploaderApp.kt  MainActivity.kt  SettingsScreen.kt
app/src/main/res/drawable/: ic_cancel.xml  ic_launcher.xml  ic_upload.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/kotopogoda/uploader/: ContractVersionTest.kt
core/data/: build.gradle.kts
core/data/schemas/com.kotopogoda.uploader.core.data.database.KotopogodaDatabase/: 10.json  11.json  12.json  7.json  8.json  9.json
core/data/src/main/: AndroidManifest.xml
core/data/src/test/resources/mockk/: io.mockk.Settings.properties
core/logging/: TEST_UTILITIES.md  build.gradle.kts  consumer-rules.pro
core/network/: .openapi-generator-ignore  build.gradle.kts  openapi-generator-ignore
core/network/openapi-templates/kotlin/: data_class.mustache
core/network/src/androidTest/: AndroidManifest.xml
core/network/src/main/: AndroidManifest.xml
core/network/src/main/openapi/: fallback-openapi.yaml
core/security/: build.gradle.kts  consumer-rules.pro
core/security/src/main/: AndroidManifest.xml
core/settings/: build.gradle.kts
core/settings/src/main/: AndroidManifest.xml
core/ui/: build.gradle.kts
core/ui/src/main/res/values/: strings.xml
core/ui/src/main/res/values-en/: strings.xml
core/work/: build.gradle.kts
core/work/src/main/: AndroidManifest.xml
docs/: NATIVE_NCNN_INTEGRATION.md  mockk-memory-diagnosis-summary.md  mockk-memory-diagnosis.md  models.lock.sample.json  models.md
feature/onboarding/: build.gradle.kts
feature/onboarding/src/main/: AndroidManifest.xml
feature/onboarding/src/main/res/values/: strings.xml
feature/onboarding/src/main/res/values-en/: strings.xml
feature/pairing/: build.gradle.kts  consumer-rules.pro
feature/pairing/src/main/: AndroidManifest.xml
feature/queue/: build.gradle.kts  consumer-rules.pro
feature/queue/src/main/res/values/: strings.xml
feature/queue/src/main/res/values-en/: strings.xml
feature/status/: build.gradle.kts  consumer-rules.pro
feature/status/src/main/res/values/: strings.xml
feature/status/src/main/res/values-en/: strings.xml
feature/viewer/: TESTING.md  build.gradle.kts  consumer-rules.pro  lint-baseline.xml
feature/viewer/src/main/: AndroidManifest.xml
feature/viewer/src/main/assets/: zero_dce.tflite  zero_dce_pp.tflite
feature/viewer/src/main/res/values/: strings.xml
feature/viewer/src/main/res/values-en/: strings.xml
gradle/: libs.versions.toml
scripts/: download_ncnn.sh  model_sources.lock.json  prepare_models.py  prepare_models.sh  publish_models_release.sh
tools/: README.md  gen_models_lock.py
(+265 files in other folders)
